fix width wrap

--- a/app/assets/stylesheets/home/style.css.scss
+++ b/app/assets/stylesheets/home/style.css.scss
@@ -57,7 +57,7 @@ body {
 	background: url('http://bncvn.net/uploads/web/qc_bg_0.80551500_1378131270.jpg') !important;
 }
 .wrap {
-	width: 1300px;
+	width: 1200px;
 	margin: 0 auto;
 	background: #fff !important;
 	border: 1px solid #eee;
